--- a/basic-solc-project/foundry.toml
+++ b/basic-solc-project/foundry.toml
@@ -3,4 +3,9 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+remappings = ['@openzeppelin/contracts=lib/openzeppelin-contracts/contracts']
+
+[fuzz]
+runs = 600
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
